# src/main/java/com/dxc/ppm/nurseadapter/delegate/V1ApiDelegateImpl.java
@@ -19,6 +19,11 @@ public class V1ApiDelegateImpl implements V1ApiDelegate {
     }
 
     @Override
+    public ResponseEntity<List<String>> searchPatientIdsByName(String patientName) {
+        return ResponseEntity.ok(service.searchPatientIdsByName(patientName));
+    }
+
+    @Override
     public ResponseEntity<String> upsert(PersonalInfo info) {
         return ResponseEntity.ok(service.upsert(info));
     }
